# WebGraph

./: .gitignore  Cargo.toml  README.md  clear.offsets.plain  graph  new_clear.offsets.plain  test.graph  test.properties
src/: lib.rs  main.rs  properties.rs
src/ascii_graph/: mod.rs  tests.rs
src/bitstream/: mod.rs
src/bitstreams/: mod.rs  tables.rs  tests.rs
src/huffman_zuckerli/: huffman_decoder.rs  huffman_encoder.rs  mod.rs  tests.rs
src/iterators/: mod.rs
src/plain_webgraph/: mod.rs  tests.rs
src/ross/: mod.rs
src/uncompressed_graph/: mod.rs  tests.rs
src/uncompressed_graph/test_data/: clear.offsets.plain
src/utils/: encodings.rs  huffman.rs  mod.rs  timer.rs  timers.rs
src/webgraph/: bvgraph.rs  bvgraph_huffman_full.rs  bvgraph_huffman_in.rs  bvgraph_huffman_out.rs  mod.rs  tests.rs  zuckerli_in.rs  zuckerli_out.rs
