[package]
name = "webgraph_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
num-traits = "0.2.15"
sucds = "0.8.0"
rand = "0.8.5"
java-properties = "2.0.0"
anyhow = { version = "1.0.75", features=["backtrace"]}
epserde = {git = "https://github.com/vigna/epserde-rs"}
webgraph = { path = "/home/caba/Desktop/webgraph-rs-main" }
